--- a/angular-forms-model/src/app/app.component.html
+++ b/angular-forms-model/src/app/app.component.html
@@ -1,27 +1,29 @@
-<form>
+<form novalidate [formGroup]="myForm">
   <md-card>
     <md-card-title>User Sign Up</md-card-title>
     <md-card-content>
+      <p *ngIf="myForm.controls.firstName.hasError('required')">First Name is required!</p>
+      <p *ngIf="myForm.controls.firstName.hasError('invalidName')">First name must start with <tt>ABC</tt></p>
       <div class="flex">
-        <md-input placeholder="First name" name="first"></md-input>
-        <md-input placeholder="Last name" name="last"></md-input>
+        <md-input placeholder="First name" name="first" formControlName="firstName"></md-input>
+        <md-input placeholder="Last name" name="last" formControlName="lastName"></md-input>
       </div>
-      <md-input placeholder="Username" name="username"></md-input>
+      <md-input placeholder="Username" name="username" formControlName="userName"></md-input>
       <div class="flex">
-        <md-input placeholder="Password" name="password"></md-input>
-        <md-input placeholder="Confirm Password" name="confirmPassword"></md-input>
+        <md-input placeholder="Password" name="password" formControlName="password"></md-input>
+        <md-input placeholder="Confirm Password" name="confirmPassword" formControlName="confirmPassword"></md-input>
       </div>
-      <div>
+      <div formGroupName="address">
         <p>Address</p>
-        <md-input placeholder="Street" name="street" required></md-input>
+        <md-input placeholder="Street" name="street" formControlName="street"></md-input>
         <div class="flex align-center">
-          <md-input placeholder="City" name="city" class="flex-three"></md-input>
-          <select name="state" class="flex-one">
+          <md-input placeholder="City" name="city" class="flex-three" formControlName="city"></md-input>
+          <select name="state" class="flex-one" formControlName="state">
               <option value="" disabled>Select a state</option>
               <option value="CA">CA</option>
               <option value="NY">NY</option>
             </select>
-          <md-input placeholder="zip" type="number" name="zip" class="flex-one"></md-input>
+          <md-input placeholder="zip" type="number" name="zip" class="flex-one" formControlName="zip"></md-input>
         </div>
       </div>
     </md-card-content>
@@ -30,3 +32,4 @@
     </md-card-actions>
   </md-card>
 </form>
+{{ myForm.value | json }}
