Updated to RC 5 and Alpha 7

--- a/angular-forms-start/src/app/app.component.html
+++ b/angular-forms-start/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <form>
   <md-card>
     <md-card-title>User Sign Up</md-card-title>
@@ -13,7 +14,7 @@
       </div>
       <div>
         <p>Address</p>
-        <md-input placeholder="Street" name="street" required></md-input>
+        <md-input placeholder="Street" name="street"></md-input>
         <div class="flex align-center">
           <md-input placeholder="City" name="city" class="flex-three"></md-input>
           <select name="state" class="flex-one">
